# Sysight

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  README.zh-CN.md  analyzer.md  architecture-review-20260429.md  plan.md  pyproject.toml  self-improving-nsys-expert-blueprint.md  worklog.md
.claude/: CLAUDE.md
.claude/rules/: code-style.md  security.md  testing.md  worklog.md
docs/: 01-overview.md  02-pipeline.md  02-quick-start.md  03-analyzer.md  03-architecture.md  04-optimizer.md  04-pipeline-stages.md  05-agent-context.md  05-agent-loop.md  06-tool-system.md  06-wiki-memory.md  07-benchmark.md  08-wiki-memory.md  09-configuration.md  launch-review.md  summary.md
optimizer-bench/tests/: validate_structure.py
optimizer-bench/tools/: score_optimizer.py
remote-device-server/: .env.example  .gitignore  README.md  pyproject.toml  requirements-client.txt  requirements-server.txt
remote-device-server/client/: api.py  cli.py  config.py
remote-device-server/client/skills/: base.py  logs.py  monitor.py  push.py  submit.py  sync.py
remote-device-server/scripts/: install_cloud.sh  quick_start.sh
remote-device-server/server/: auth.py  config.py  db.py  main.py  models.py
remote-device-server/server/routers/: envs.py  files.py  monitor.py  tasks.py
remote-device-server/server/services/: log_store.py  monitor.py  task_manager.py
scripts/: export-nsys-sqlite.sh  parallel-orchestrator-demo.sh  run-profile-analysis.sh
skills/: agent.md  memory.md  profile-analysis-report.md  remote-profile-run.md
src/nsys_agent/: __init__.py  __main__.py  cli.py  profile.py
src/sysight/: __init__.py  __main__.py  annotation.py  cli.py  profile.py  workflow.py
sysight/: __init__.py
sysight/agent/: __init__.py  config_loader.py  context.py  loop.py  provider.py
test/: test_analyzer.py  test_callsite.py  test_cli_nsys_split.py  test_executor.py  test_findings.py  test_memory_cli.py  test_nsys_correctness.py  test_nsys_render.py  test_nsys_sql_analysis.py  test_nsys_sql_cli.py  test_optimizer.py  test_scanner.py  test_task_draft.py
tests/: test_code_location.py  test_workflow.py
workspace/: program.md
(+319 files in other folders)
