[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsys-agent"
version = "0.1.0"
description = "Lightweight Torch-first analysis pipeline for Nsight Systems profiles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nsys-agent = "nsys_agent.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
