[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sysight"
version = "0.2.0"
description = "AI-powered GPU performance analysis and optimization"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
sysight = "sysight.cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sysight"]

[tool.pytest.ini_options]
testpaths = [
    "test/test_types",
    "test/test_tools",
    "test/test_wiki",
    "test/test_agent",
]
