[project]
name = "remote-device-server"
version = "0.1.0"
description = "Remote GPU device server for code deployment and task execution"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "pynvml>=11.5",
    "psutil>=5.9",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "typer>=0.9",
    "rich>=13.0",
    "websockets>=11.0",
]

[project.scripts]
rds-server = "server.main:run"
rds = "client.cli:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*", "client*"]
